Added MILo webpage + minor style changes.

--- a/frosting/index.html
+++ b/frosting/index.html
@@ -36,7 +36,7 @@
 
  <!-- <link href="style_2.css" rel="stylesheet"> -->
  <!-- <link href="style.css" rel="stylesheet"> -->
- <link href="../base2.css" rel="stylesheet">
+ <link href="../base.css" rel="stylesheet">
 
 <!--  Google Analytics (DO NOT copy/paste following section, setup your own analytics tag at https://analytics.google.com/analytics/web/)  -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDL4R10HKE"></script>
@@ -58,7 +58,7 @@
 <div class="container" style="text-align:center; padding-top:2rem 15px">
  <div class="row" style="text-align:center">
    <h1 style="font-size: 60px;">Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering</h1>
-   <h1 style="font-size: xxx-large;">ECCV 2024 (Oral)</h1>
+   <h1 class="secondary" style="font-size: xxx-large;">ECCV 2024 (Oral)</h1>
  </div>
  <div class="row" style="text-align:center">
    <div class="col-xs-0 col-md-2"></div>
@@ -496,7 +496,7 @@
 
  <div class="card">
    <div class="card-block">
-     <pre class="card-text clickselect">
+     <pre class="card-text clickselect" style="background-color: #000000; color: #ffffff;">
       @article{guedon2024frosting,
         title={Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering},
         author={Gu{\'e}don, Antoine and Lepetit, Vincent},
