--- a/sugar/index.html
+++ b/sugar/index.html
@@ -35,7 +35,7 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
  <!-- <link href="style_2.css" rel="stylesheet"> -->
- <link href="../base2.css" rel="stylesheet">
+ <link href="../base.css" rel="stylesheet">
 
 <!--  Google Analytics (DO NOT copy/paste following section, setup your own analytics tag at https://analytics.google.com/analytics/web/)  -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDL4R10HKE"></script>
@@ -57,7 +57,7 @@
 <div class="container" style="text-align:center; padding-top:2rem 15px">
  <div class="row" style="text-align:center">
    <h1 style="font-size: 60px;">SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering</h1>
-   <h1 style="font-size: xxx-large;">CVPR 2024</h1>
+   <h1 class="secondary" style="font-size: xxx-large;">CVPR 2024</h1>
  </div>
  <div class="row" style="text-align:center">
    <div class="col-xs-0 col-md-2"></div>
@@ -622,7 +622,7 @@
  <br><br>
  <div class="card">
    <div class="card-block">
-     <pre class="card-text clickselect">
+     <pre class="card-text clickselect" style="background-color: #000000; color: #ffffff;">
       @article{guedon2023sugar,
         title={SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering},
         author={Gu{\'e}don, Antoine and Lepetit, Vincent},
