--- a/MACARONS/index.html
+++ b/MACARONS/index.html
@@ -35,7 +35,7 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
  <!-- <link href="style_2.css" rel="stylesheet"> -->
- <link href="../base2.css" rel="stylesheet">
+ <link href="../base.css" rel="stylesheet">
 
 <!--  Google Analytics (DO NOT copy/paste following section, setup your own analytics tag at https://analytics.google.com/analytics/web/)  -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDL4R10HKE"></script>
@@ -57,7 +57,7 @@
 <div class="container" style="text-align:center; padding-top:2rem 15px">
  <div class="row" style="text-align:center">
    <h1 style="font-size: 60px;">MACARONS: Mapping And Coverage Anticipation with RGB ONline Self-supervision</h1>
-   <h1 style="font-size: xxx-large;">CVPR 2023</h1>
+   <h1 class="secondary" style="font-size: xxx-large;">CVPR 2023</h1>
  </div>
  <div class="row" style="text-align:center">
    <div class="col-xs-0 col-md-2"></div>
@@ -96,16 +96,22 @@
 
  <div class="row" style="padding:2rem">
    <div class="col-xs-12">
-   <img src="teaser.png" alt="teaser.png" class="text-center" style="width: 90%; max-width: 1000px">
+   <img src="teaser.png" alt="teaser.png" class="text-center" style="width: 100%;">
    <!-- <video autoplay loop muted playsinline src="teaser.mp4" style="width:95%; max-width: 900px"></video> -->
    <!--<img src="teaser.gif" alt="teaser.gif" class="text-center" style="width: 95%; max-width: 900px">-->
    <div class="wrapper">
      <!-- <div class="col-xs-4 col-lg-6;"> -->
-      <p style="text-align: center">(a) NBV methods with a depth sensor (<i>e.g.</i>, <a href="https://arxiv.org/abs/2208.10449">SCONE</a> by Gu&eacutedon et al.)</p>
-      <p style="text-align: center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+      <p style="text-align: center ; font-size: 16px;">
+        (a) NBV methods with a depth sensor (<i>e.g.</i>, <a href="https://arxiv.org/abs/2208.10449">SCONE</a> by Gu&eacutedon et al.)
+      <!-- </p>
+      <p style="text-align: center ; font-size: 16px;"> -->
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <!-- </p> -->
      <!-- </div>
      <div class="col-xs-4 col-lg-6;"> -->
-      <p style="text-align: center">(b) Our approach MACARONS with an RGB sensor</p>
+      <!-- <p style="text-align: center ; font-size: 16px;"> -->
+        (b) Our approach MACARONS with an RGB sensor
+      </p>
      <!-- </div> -->
    </div>
    </div>
@@ -259,11 +265,11 @@
    <div class="row">
      <div class="col-xs-12">
      <div class="wrapper" style="text-align: center">
-       <div class="col-xs-4 col-lg-6">
+       <div class="col-xs-6 col-lg-6">
          <img src="results/trajectories/liberty.png" alt="results/trajectories/liberty.png" class="text-center" style="width: 100%; max-width: 1000px">
          Trajectory in GT scene
        </div>
-       <div class="col-xs-4 col-lg-6">
+       <div class="col-xs-6 col-lg-6">
          <img src="results/reconstructions/liberty.png" alt="results/reconstructions/liberty.png" class="text-center" style="width: 100%; max-width: 1000px">
          Reconstructed surface
        </div>
@@ -284,11 +290,11 @@
     <div class="row">
       <div class="col-xs-12">
       <div class="wrapper" style="text-align: center">
-        <div class="col-xs-4 col-lg-6">
+        <div class="col-xs-6 col-lg-6">
           <img src="results/trajectories/pisa.png" alt="results/trajectories/pisa.png" class="text-center" style="width: 100%; max-width: 1000px">
           Trajectory in GT scene
         </div>
-        <div class="col-xs-4 col-lg-6">
+        <div class="col-xs-6 col-lg-6">
           <img src="results/reconstructions/pisa.png" alt="results/reconstructions/pisa.png" class="text-center" style="width: 100%; max-width: 1000px">
           Reconstructed surface
         </div>
@@ -310,11 +316,11 @@
      <div class="row">
        <div class="col-xs-12">
        <div class="wrapper" style="text-align: center">
-         <div class="col-xs-4 col-lg-6">
+         <div class="col-xs-6 col-lg-6">
            <img src="results/trajectories/alhambra.png" alt="results/trajectories/alhambra.png" class="text-center" style="width: 100%; max-width: 1000px">
            Trajectory in GT scene
          </div>
-         <div class="col-xs-4 col-lg-6">
+         <div class="col-xs-6 col-lg-6">
            <img src="results/reconstructions/alhambra.png" alt="results/reconstructions/alhambra.png" class="text-center" style="width: 100%; max-width: 1000px">
            Reconstructed surface
          </div>
@@ -335,11 +341,11 @@
       <div class="row">
         <div class="col-xs-12">
         <div class="wrapper" style="text-align: center">
-          <div class="col-xs-4 col-lg-6">
+          <div class="col-xs-6 col-lg-6">
             <img src="results/trajectories/pantheon.png" alt="results/trajectories/pantheon.png" class="text-center" style="width: 100%; max-width: 1000px">
             Trajectory in GT scene
           </div>
-          <div class="col-xs-4 col-lg-6">
+          <div class="col-xs-6 col-lg-6">
             <img src="results/reconstructions/pantheon.png" alt="results/reconstructions/pantheon.png" class="text-center" style="width: 100%; max-width: 1000px">
             Reconstructed surface
           </div>
@@ -360,11 +366,11 @@
        <div class="row">
          <div class="col-xs-12">
          <div class="wrapper" style="text-align: center">
-           <div class="col-xs-4 col-lg-6">
+           <div class="col-xs-6 col-lg-6">
              <img src="results/trajectories/eiffel.png" alt="results/trajectories/eiffel.png" class="text-center" style="width: 100%; max-width: 1000px">
              Trajectory in GT scene
            </div>
-           <div class="col-xs-4 col-lg-6">
+           <div class="col-xs-6 col-lg-6">
              <img src="results/reconstructions/eiffel.png" alt="results/reconstructions/eiffel.png" class="text-center" style="width: 100%; max-width: 1000px">
              Reconstructed surface
            </div>
@@ -385,11 +391,11 @@
         <div class="row">
           <div class="col-xs-12">
           <div class="wrapper" style="text-align: center">
-            <div class="col-xs-4 col-lg-6">
+            <div class="col-xs-6 col-lg-6">
               <img src="results/trajectories/neus.png" alt="results/trajectories/neus.png" class="text-center" style="width: 100%; max-width: 1000px">
               Trajectory in GT scene
             </div>
-            <div class="col-xs-4 col-lg-6">
+            <div class="col-xs-6 col-lg-6">
               <img src="results/reconstructions/neus.png" alt="results/reconstructions/neus.png" class="text-center" style="width: 100%; max-width: 1000px">
               Reconstructed surface
             </div>
@@ -410,11 +416,11 @@
         <div class="row">
           <div class="col-xs-12">
           <div class="wrapper" style="text-align: center">
-            <div class="col-xs-4 col-lg-6">
+            <div class="col-xs-6 col-lg-6">
               <img src="results/trajectories/colosseum.png" alt="results/trajectories/colosseum.png" class="text-center" style="width: 100%; max-width: 1000px">
               Trajectory in GT scene
             </div>
-            <div class="col-xs-4 col-lg-6">
+            <div class="col-xs-6 col-lg-6">
               <img src="results/reconstructions/colosseum.png" alt="results/reconstructions/colosseum.png" class="text-center" style="width: 100%; max-width: 1000px">
               Reconstructed surface
             </div>
@@ -435,11 +441,11 @@
       <div class="row">
         <div class="col-xs-12">
         <div class="wrapper" style="text-align: center">
-          <div class="col-xs-4 col-lg-6">
+          <div class="col-xs-6 col-lg-6">
             <img src="results/trajectories/manhattan.png" alt="results/trajectories/manhattan.png" class="text-center" style="width: 100%; max-width: 1000px">
             Trajectory in GT scene
           </div>
-          <div class="col-xs-4 col-lg-6">
+          <div class="col-xs-6 col-lg-6">
             <img src="results/reconstructions/manhattan.png" alt="results/reconstructions/manhattan.png" class="text-center" style="width: 100%; max-width: 1000px">
             Reconstructed surface
           </div>
@@ -460,11 +466,11 @@
        <div class="row">
          <div class="col-xs-12">
          <div class="wrapper" style="text-align: center">
-           <div class="col-xs-4 col-lg-6">
+           <div class="col-xs-6 col-lg-6">
              <img src="results/trajectories/fushimi.png" alt="results/trajectories/fushimi.png" class="text-center" style="width: 100%; max-width: 1000px">
              Trajectory in GT scene
            </div>
-           <div class="col-xs-4 col-lg-6">
+           <div class="col-xs-6 col-lg-6">
              <img src="results/reconstructions/fushimi.png" alt="results/reconstructions/fushimi.png" class="text-center" style="width: 100%; max-width: 1000px">
              Reconstructed surface
            </div>
@@ -485,11 +491,11 @@
            <div class="row">
              <div class="col-xs-12">
              <div class="wrapper" style="text-align: center">
-               <div class="col-xs-4 col-lg-6">
+               <div class="col-xs-6 col-lg-6">
                  <img src="results/trajectories/redeemer.png" alt="results/trajectories/redeemer.png" class="text-center" style="width: 100%; max-width: 1000px">
                  Trajectory in GT scene
                </div>
-               <div class="col-xs-4 col-lg-6">
+               <div class="col-xs-6 col-lg-6">
                  <img src="results/reconstructions/redeemer.png" alt="results/reconstructions/redeemer.png" class="text-center" style="width: 100%; max-width: 1000px">
                  Reconstructed surface
                </div>
@@ -510,11 +516,11 @@
             <div class="row">
               <div class="col-xs-12">
               <div class="wrapper" style="text-align: center">
-                <div class="col-xs-4 col-lg-6">
+                <div class="col-xs-6 col-lg-6">
                   <img src="results/trajectories/dunnottar.png" alt="results/trajectories/dunnottar.png" class="text-center" style="width: 100%; max-width: 1000px">
                   Trajectory in GT scene
                 </div>
-                <div class="col-xs-4 col-lg-6">
+                <div class="col-xs-6 col-lg-6">
                   <img src="results/reconstructions/dunnottar.png" alt="results/reconstructions/dunnottar.png" class="text-center" style="width: 100%; max-width: 1000px">
                   Reconstructed surface
                 </div>
@@ -535,11 +541,11 @@
              <div class="row">
                <div class="col-xs-12">
                <div class="wrapper" style="text-align: center">
-                 <div class="col-xs-4 col-lg-6">
+                 <div class="col-xs-6 col-lg-6">
                    <img src="results/trajectories/bannerman.png" alt="results/trajectories/bannerman.png" class="text-center" style="width: 100%; max-width: 1000px">
                    Trajectory in GT scene
                  </div>
-                 <div class="col-xs-4 col-lg-6">
+                 <div class="col-xs-6 col-lg-6">
                    <img src="results/reconstructions/bannerman.png" alt="results/reconstructions/bannerman.png" class="text-center" style="width: 100%; max-width: 1000px">
                    Reconstructed surface
                  </div>
@@ -594,7 +600,7 @@
  
  <div class="card">
    <div class="card-block">
-     <pre class="card-text clickselect">
+     <pre class="card-text clickselect" style="background-color: #000000; color: #ffffff;">
       @inproceedings{guedon2023macarons,
         title={MACARONS: Mapping And Coverage Anticipation with RGB Online Self-Supervision},
         author={Gu{\'e}don, Antoine and Monnier, Tom and Monasse, Pascal and Lepetit, Vincent},
