--- a/milo/index.html
+++ b/milo/index.html
@@ -192,8 +192,8 @@
    <h1 class="secondary">SIGGRAPH Asia 2025 - Journal Track <br>ACM Transactions on Graphics</h1>
  </div>
  <div class="row" style="text-align:center">
-   <div class="col-xs-0 col-md-2"></div>
-   <div class="col-xs-12 col-md-8">
+   <div ></div>
+   <div >
      <h4 style="font-size: 22px;">
        <nobr><a href="https://anttwo.github.io/">Antoine Gu&eacutedon<sup>1</sup>*</a></nobr> &emsp;
        <nobr><a href="https://www.lix.polytechnique.fr/Labo/Diego.GOMEZ/">Diego Gomez<sup>1</sup>*</a></nobr> &emsp;
