Fixed alignment bug

--- a/matcha/index.html
+++ b/matcha/index.html
@@ -61,8 +61,8 @@
    <h1 class="secondary" style="font-size: xxx-large;">CVPR 2025 (Highlight)</h1>
  </div>
  <div class="row" style="text-align:center">
-   <div class="col-xs-0 col-md-2"></div>
-   <div class="col-xs-12 col-md-8">
+   <div ></div>
+   <div >
      <h4 style="font-size: 22px;">
        <nobr><a href="https://anttwo.github.io/">Antoine Gu&eacutedon<sup>1</sup></a></nobr> &emsp;
        <nobr><a href="https://scholar.google.com/citations?user=-LzEJVwAAAAJ&hl=en">Tomoki Ichikawa<sup>2</sup></a></nobr> &emsp;
