--- a/MACARONS/index.html
+++ b/MACARONS/index.html
@@ -60,8 +60,8 @@
    <h1 class="secondary" style="font-size: xxx-large;">CVPR 2023</h1>
  </div>
  <div class="row" style="text-align:center">
-   <div class="col-xs-0 col-md-2"></div>
-   <div class="col-xs-12 col-md-8">
+   <div ></div>
+   <div >
      <h4 style="font-size: 22px;">
        <nobr><a href="https://anttwo.github.io/">Antoine Gu&eacutedon</a></nobr> &emsp;
        <nobr><a href="https://www.tmonnier.com">Tom Monnier</a></nobr>&emsp;
