--- a/frosting/index.html
+++ b/frosting/index.html
@@ -61,8 +61,8 @@
    <h1 class="secondary" style="font-size: xxx-large;">ECCV 2024 (Oral)</h1>
  </div>
  <div class="row" style="text-align:center">
-   <div class="col-xs-0 col-md-2"></div>
-   <div class="col-xs-12 col-md-8">
+   <div ></div>
+   <div >
      <h4 style="font-size: 22px;">
        <nobr><a href="https://anttwo.github.io/">Antoine Gu&eacutedon</a></nobr> &emsp;
        <nobr><a href="https://vincentlepetit.github.io/">Vincent Lepetit</a></nobr>
