--- a/defense/index.html
+++ b/defense/index.html
@@ -369,7 +369,7 @@
                 <h4><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Map</h4>
                 <hr/>
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.898621678393!2d2.5900363!3d48.841072399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e60f03c613b30d%3A0x6b8b64cf7bd53e66!2sB%C3%A2timent%20Coriolis!5e0!3m2!1sfr!2sfr!4v1756048788394!5m2!1sfr!2sfr" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1872454111738!2d2.5873772536471256!3d48.84150941500598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e60e2d7f85dc39%3A0x14058c059473d90b!2s%C3%89cole%20nationale%20des%20ponts%20et%20chauss%C3%A9es%20(ENPC)!5e0!3m2!1sfr!2sfr!4v1758717065863!5m2!1sfr!2sfr"
                     width="100%" 
                     height="387" 
                     style="border:0;" 
@@ -383,7 +383,7 @@
                 <h4><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Location</h4>
                 <hr/>
                 <p style="font-size: 18px; margin-left: 2rem;">
-                    <strong>Venue:</strong> Amphithéâtre Caquot, Coriolis building<br>
+                    <strong>Venue:</strong> Amphithéâtre Cauchy, Carnot building<br>
                     <strong>Address:</strong><br>
                     École des Ponts ParisTech<br>
                     6-8, Av Blaise Pascal - Cité Descartes<br>
