Added Zoom link

--- a/defense/index.html
+++ b/defense/index.html
@@ -410,7 +410,7 @@
                 <hr/>
                 <p style="font-size: 18px; margin-left: 2rem;">
                     The defense is public and open to all.<br>
-                    <strong>Online streaming:</strong> <a href="">Link is coming soon.</a><br>
+                    <strong>Online streaming:</strong> <a href="https://us02web.zoom.us/j/83473564464?pwd=MlZKOTF2akxxVTFDd0k1Qmx1U3JBZz09">Click here to open Zoom.</a><br>
                     <strong>Contact:</strong> antoine (dot) guedon (at) enpc.fr for any questions
                 </p>
             </div>
