--- a/defense/index.html
+++ b/defense/index.html
@@ -400,7 +400,7 @@
                     • <a href="https://imagine.enpc.fr/~monasse/">Pascal Monasse</a> (ENPC)<br><br>
                     
                     <strong>Jury Members:</strong><br>
-                    • <a href="https://www.umr-lastig.fr/vgouet/">Valérie Gouet</a> (LaSTIG - IGN) - President<br>
+                    • <a href="https://www.umr-lastig.fr/vgouet/">Valérie Gouet-Brunet</a> (LaSTIG - IGN) - President<br>
                     • <a href="https://theialab.ca/">Andrea Tagliasacchi</a> (Simon Fraser University) - Reviewer<br>
                     • <a href="https://www.lix.polytechnique.fr/~maks/">Maks Ovsjanikov</a> (Ecole polytechnique) - Reviewer<br>
                     • <a href="https://cosmer.univ-tln.fr/claire-dune/">Claire Dune</a> (Université de Toulon) - Examiner<br>
