--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
         <div class="col-lg-6" style="text-align:left; font-size: xx-large;">
             <div class="row" style="padding-left: 1.5rem;">
                 <h1 style="font-size: 70px;">Antoine Gu&eacutedon</h1>
-                <h1 class="secondary" style="font-size: 55px;">PhD Student</h1>
+                <h1 class="secondary" style="font-size: 55px;">Postdoc Researcher</h1>
             </div>
-          <a href="https://imagine.enpc.fr/" style="font-weight: 400;">IMAGINE</a> /
+          <!--IMAGINE-->
+          <!-- <a href="https://imagine.enpc.fr/" style="font-weight: 400;">IMAGINE</a> /
           <a href="http://ligm.u-pem.fr/accueil/" style="font-weight: 400;">LIGM</a><br>
           <a href="https://www.ecoledesponts.fr/en">&Eacutecole des Ponts ParisTech (ENPC)</a>
           <p style="font-size: large;">
@@ -71,6 +72,18 @@
             77455 Marne-la-Vall&eacutee cedex 2 <br>
             France <br>
             &#9993 antoine (dot) guedon (at) enpc.fr <br>
+          </p> -->
+          <!--GeomeriX-->
+          <a href="https://team.inria.fr/geomerix/" style="font-weight: 400;">GeomeriX</a> /
+          <a href="https://www.lix.polytechnique.fr/" style="font-weight: 400;">LIX</a><br>
+          <a href="https://www.polytechnique.edu/">&Eacutecole polytechnique</a>
+          <p style="font-size: large;">
+            1 Rue Honoré d'Estienne d'Orves <br>
+            Palaiseau <br>
+            91120 <br>
+            France <br>
+            &#9993 antoine (dot) guedon (at) enpc.fr <br>
+          </p>
         </div>
         
         <div class="col-lg-6" style="text-align:center; padding-top: 2rem;">
@@ -87,25 +100,46 @@
         </div>
        </div>
 
-
+    <!-- PhD Defense Announcement -->
+    <!-- <div class="container" style="
+    background-color: var(--highlight-bg); 
+    border: 2px solid var(--border-color); 
+    padding: 2rem; 
+    margin-bottom: 2rem; 
+    border-radius: 10px;
+    ">
+        <h2 style="color: var(--highlight-color); margin-bottom: 1rem;"><i class="fa fa-graduation-cap"></i>&nbsp;&nbsp;PhD Defense Announcement</h2>
+        <p style="font-size: 20px; margin-bottom: 1rem;">
+            I will be defending my PhD thesis on <strong><i>Learning 3D Reconstruction from Capturing Images to Building Photorealistic Representations</i></strong> 
+            in <strong>September 2025</strong> at École des Ponts ParisTech.
+        </p>
+        <div style="text-align: center;">
+            <a href="https://anttwo.github.io/defense/" class="label label-info" style="font-size: 18px; padding: 10px 20px;">
+                <i class="fa fa-info-circle"></i>&nbsp;&nbsp;View Defense Details
+            </a>
+        </div>
+    </div> -->
 
     <div class="container">
         <h2>Introduction</h2>
         <hr/>
-        <p> I am a PhD student in the IMAGINE computer vision team of &Eacutecole des Ponts ParisTech (ENPC) and 
-            I am co-advised by <a href="https://vincentlepetit.github.io/">Vincent Lepetit (ENPC)</a> and 
-            <a href="https://imagine.enpc.fr/~monasse/">Pascal Monasse (ENPC)</a>.
+        <p style="text-align: justify;"> 
+            I am a postdoctoral researcher at the GeomeriX team of the &Eacutecole polytechnique, and am advised by <a href="https://www.lix.polytechnique.fr/~maks/">Maks Ovsjanikov</a>.
+            Before that, I got my PhD in the IMAGINE computer vision team of &Eacutecole des Ponts ParisTech (ENPC) and 
+            was co-advised by <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a> and 
+            <a href="https://imagine.enpc.fr/~monasse/">Pascal Monasse</a>.
             I am mostly interested in Image-Based Rendering (IBR) and 3D reconstruction using deep learning approaches. 
-            In particular, I worked on developing scalable approaches
-            for simultaneously learning to reconstruct and explore 3D environments. 
-            More recently, I have been working on Novel View Synthesis and surface reconstruction in radiance fields. 
-            Before that, I studied at the Ecole polytechnique as well as the &Eacutecole normale sup&eacuterieure Paris-Saclay 
-            where I obtained the MVA MS degree. </p>
+            Specifically, I worked on developing scalable approaches for simultaneously learning to reconstruct and explore 3D environments. 
+            More recently, I have been working on Novel View Synthesis and surface reconstruction with radiance fields and Gaussian splatting. 
+            In the past, I studied at the Ecole polytechnique as well as the &Eacutecole normale sup&eacuterieure Paris-Saclay 
+            where I obtained the MVA MS degree. 
+        </p>
     </div>
 
     <div class="container">
         <h2>News</h2>
         <hr/>
+        <p class="label date">10-2025</p> I am very honored to be selected as one of the <a href="https://iccv.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer">Outstanding Reviewers for ICCV 2025</a>.<br>
         <p class="label date">09-2025</p> We just released the code for <a href="https://github.com/Anttwo/MILo">MILo</a>!<br>
         <p class="label date">08-2025</p> <a href="https://anttwo.github.io/milo/">MILo</a> has been accepted to SIGGRAPH Asia 2025 - Journal Track (TOG)!<br>
         <p class="label date">05-2025</p> I am very honored to be selected as one of the <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer">Outstanding Reviewers for CVPR 2025</a>.<br>
