Updated link to demo

--- a/milo/index.html
+++ b/milo/index.html
@@ -919,7 +919,7 @@
 
  <script>
    function openScene(sceneName) {
-     window.open(`./gallery-simple.html?scene=${sceneName}`, '_blank');
+     window.open(`https://antoineguedon.fr/milo/gallery-simple.html?scene=${sceneName}`, '_blank');
    }
  </script>
 
